--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ site/modules/MillcoLocation
 .DS_Store
 site/config-Cloudways.php
 site/templates/dashboard_panel_fixins.php
+site/templates/css/Icon
